adding gitignore file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
             </nav>
         </header>
         <main>
+            <section id="about">
 
+            </section>
+            <section id="work">
+
+            </section>
+            <section id="resume">
+
+            </section>
+            <section id="contact">
+
+            </section>
         </main>
     </body>
 </html>
