--- a/index.html
+++ b/index.html
@@ -11,25 +11,33 @@
             <h1>Brandon King</h1>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
             <section id="about">
-
+                <h2>Who I am</h2>
+                CONTENT COMING
             </section>
             <section id="work">
-
+                <h2>What I've Made</h2>
             </section>
             <section id="resume">
-
+                <h2>Where I've Been</h2>
+                Content coming soon
             </section>
             <section id="contact">
-
+                <h2>How to Reach Me</h2>
+                <ul>
+                    <li>Phone</li>
+                    <li>Email</li>
+                    <li>Github</li>
+                    <li>Linkedin</li>
+                </ul>
             </section>
         </main>
     </body>
