updating index.html and style.css

--- a/index.html
+++ b/index.html
@@ -20,23 +20,30 @@
         </header>
         <main>
             <section id="about">
-                <h2>Who I am</h2>
+                <h2>Who am I?</h2>
                 CONTENT COMING
+                <img src="assets/images/headshot-2.jpg" alt="brandon king headshot" id="headshot">
             </section>
             <section id="work">
-                <h2>What I've Made</h2>
+                <h2>What Have I Made?</h2>
+                <h3>Big Brothers Big Sisters of Central Ohio</h3>
+                <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
+                <h3></h3>
+                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="" class="preview">
+                <h3></h3>
+                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="" class="preview">
             </section>
             <section id="resume">
-                <h2>Where I've Been</h2>
+                <h2>What Else Have I Done?</h2>
                 Content coming soon
             </section>
             <section id="contact">
-                <h2>How to Reach Me</h2>
+                <h2>How Can you Contact me?</h2>
                 <ul>
-                    <li>Phone</li>
-                    <li>Email</li>
-                    <li>Github</li>
-                    <li>Linkedin</li>
+                    <li><a href="tel:6145633108">phone </a></li>
+                    <li><a href="mailto:brandonscottking@gmail.com">email </a></li>
+                    <li><a href="https://github.com/thebsking">github</a> </li>
+                    <li><a href="https://linkedin.com/in/brandonsking">Linkedin</a> </li>
                 </ul>
             </section>
         </main>
