added content to index. some styling updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <header>
+        <header class="site-header">
             <h1>Brandon King</h1>
             <nav class="main-nav">
                 <ul>
@@ -20,21 +20,24 @@
         </header>
         <main>
             <section id="about">
-                <h2>Who am I?</h2>
-                CONTENT COMING
-                <img src="assets/images/headshot-2.jpg" alt="brandon king headshot" id="headshot">
+                <header class="section-header">Who am I?</header>
+                <article id="about-text">
+                    <img src="assets/images/headshot-2.jpg" alt="brandon king headshot" id="headshot">
+                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. </p>
+                    <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
+                </article>
             </section>
             <section id="work">
-                <h2>What Have I Made?</h2>
+                <header class="section-header">What Have I Made?</header>
                 <h3>Big Brothers Big Sisters of Central Ohio</h3>
                 <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
                 <h3></h3>
-                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="" class="preview">
+                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview1">
                 <h3></h3>
-                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="" class="preview">
+                <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview2">
             </section>
             <section id="resume">
-                <h2>What Else Have I Done?</h2>
+                <header class="section-header">What Else Have I Done?</header>
                 Content coming soon
             </section>
             <section id="contact">
