added resume content

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <main>
             <section id="about">
-                <header class="section-header">Who am I?</header>
+                <header class="section-header">Who I Am</header>
                 <article id="about-text">
                     <img src="assets/images/headshot-2.jpg" alt="brandon king headshot" id="headshot">
                     <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. </p>
@@ -28,20 +28,35 @@
                 </article>
             </section>
             <section id="work">
-                <header class="section-header">What Have I Made?</header>
+                <header class="section-header">What I've Made</header>
                 <h3>Big Brothers Big Sisters of Central Ohio</h3>
                 <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
-                <h3></h3>
+                <h3>Coming Soon</h3>
                 <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview1">
-                <h3></h3>
+                <h3>Coming Soon</h3>
                 <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview2">
             </section>
             <section id="resume">
-                <header class="section-header">What Else Have I Done?</header>
-                Content coming soon
+                <header class="section-header">How I Got Here</header>
+                    <article>
+                        <h3>Skills</h3>
+                        PLACEHOLDER
+                    </article>
+                    <article id="Education">
+                        <h3>Education</h3>
+                        <h4>The Ohio State University</h4>
+                        <p>B.A. Commnunication - 2009</p>
+                        <p>Coding Bootcamp - 2021</p>
+                </article>
+                <article id="jobs">
+                <h3>Experience</h3>
+                <h4>Big Brothers Big Sisters of Central Ohio</h4>
+                <p>2017 - Present</p>
+                <p>Technology & Operations Specialist</p>
+                </article>
             </section>
             <section id="contact">
-                <h2>How Can you Contact me?</h2>
+                <header class="section-header">Where to Find Me</header>
                 <ul>
                     <li><a href="tel:6145633108">phone </a></li>
                     <li><a href="mailto:brandonscottking@gmail.com">email </a></li>
