updated about me section

--- a/index.html
+++ b/index.html
@@ -24,30 +24,46 @@
             <section id="about">
                 <header class="section-header">Who I Am</header>
                 <article id="about-text" class="clear">
-                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. </p>
+                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. But I have always had an interest in web development. I remember learning html when GeoCities was popular, and I have tried to continually add to my skills ever since. </p>
                     <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
                 </article>
             </section>
             <section id="work">
                 <header class="section-header">What I've Made</header>
-                <div class="card clear">
-                    <h3>Big Brothers Big Sisters of Central Ohio</h3>
-                    <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
-                </div>
-                <div class="card clear">
-                    <h3>Coming Soon</h3>
-                    <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview1">
-                </div>
-                <div class="card clear">
-                    <h3>Coming Soon</h3>
-                    <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview" id="preview2">
+                    <div class="card clear top-preview">
+                        <h3>Big Brothers Big Sisters of Central Ohio</h3>
+                        <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
+                    </div>
+                    <div class="preview-container">
+                    <div class="card clear other-sites">
+                        <h3>Coming Soon</h3>
+                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview"   >
+                    </div>
+                    <div class="card clear other-sites">
+                        <h3>Coming Soon</h3>
+                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                    </div>
+                    <div class="card clear other-sites">
+                        <h3>Coming Soon</h3>
+                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                    </div>
+                    <div class="card clear other-sites">
+                        <h3>Coming Soon</h3>
+                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                    </div>
                 </div>
             </section>
             <section id="resume">
                 <header class="section-header">How I Got Here</header>
                     <article class="clear">
                         <h3>Skills</h3>
-                        PLACEHOLDER
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                            <li>Wordpress</li>
+                            <li>Git</li>
+                        </ul>
                     </article>
                     <article class="clear" id="Education">
                         <h3>Education</h3>
@@ -65,10 +81,10 @@
             <section id="contact">
                 <header class="section-header">Where to Find Me</header>
                 <ul class="clear">
-                    <li><a href="tel:6145633108"><i class="fas fa-mobile"></i> </a></li>
-                    <li><a href="mailto:brandonscottking@gmail.com"><i class="far fa-envelope"></i> </a></li>
-                    <li><a href="https://github.com/thebsking"><i class="fab fa-github"></i></a> </li>
-                    <li><a href="https://linkedin.com/in/brandonsking"><i class="fab fa-linkedin-in"></i></a> </li>
+                    <li><a href="tel:6145633108"><i class="fas fa-mobile" name="Mobile Number"></i> </a></li>
+                    <li><a href="mailto:brandonscottking@gmail.com"><i class="far fa-envelope" name="Email"></i> </a></li>
+                    <li><a href="https://github.com/thebsking"><i class="fab fa-github" name="Github"></i></a> </li>
+                    <li><a href="https://linkedin.com/in/brandonsking"><i class="fab fa-linkedin-in" name="LinkedIn"></i></a> </li>
                 </ul>
             </section>
             <footer>
