--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <section id="about">
                 <header class="section-header">Who I Am</header>
                 <article id="about-text" class="clear">
-                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. But I have always had an interest in web development. I remember learning html when GeoCities was popular, and I have tried to continually add to my skills ever since. </p>
+                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. 
+                    <p>But I have always had an interest in web development. I remember learning html when GeoCities was popular, and I have tried to continually add to my skills ever since. </p>
                     <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
                 </article>
             </section>
@@ -36,20 +37,20 @@
                     </div>
                     <div class="preview-container">
                     <div class="card clear other-sites">
-                        <h3>Coming Soon</h3>
-                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview"   >
+                        <h3>Project 1</h3>
+                        <img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg" alt="placeholder image" class="preview"   >
                     </div>
                     <div class="card clear other-sites">
-                        <h3>Coming Soon</h3>
-                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                        <h3>Project 2</h3>
+                        <img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg" alt="placeholder image" class="preview">
                     </div>
                     <div class="card clear other-sites">
-                        <h3>Coming Soon</h3>
-                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                        <h3>Project 3</h3>
+                        <img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg" alt="placeholder image" class="preview">
                     </div>
                     <div class="card clear other-sites">
-                        <h3>Coming Soon</h3>
-                        <img src="https://user-images.githubusercontent.com/194400/49531010-48dad180-f8b1-11e8-8d89-1e61320e1d82.png" alt="placeholder image" class="preview">
+                        <h3>Project 4</h3>
+                        <img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg" alt="placeholder image" class="preview">
                     </div>
                 </div>
             </section>
@@ -81,7 +82,7 @@
             <section id="contact">
                 <header class="section-header">Where to Find Me</header>
                 <ul class="clear">
-                    <li><a href="tel:6145633108"><i class="fas fa-mobile" name="Mobile Number"></i> </a></li>
+                    <li><a href="tel:6145633108"><i class="fas fa-mobile" name="Phone"></i> </a></li>
                     <li><a href="mailto:brandonscottking@gmail.com"><i class="far fa-envelope" name="Email"></i> </a></li>
                     <li><a href="https://github.com/thebsking"><i class="fab fa-github" name="Github"></i></a> </li>
                     <li><a href="https://linkedin.com/in/brandonsking"><i class="fab fa-linkedin-in" name="LinkedIn"></i></a> </li>
@@ -89,6 +90,7 @@
             </section>
             <footer>
                 <h5>Created by BK &copy; 2021</h5>
+                <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
             </footer>
         </main>
     </body>
