final edits before submission

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                     <div class="preview-container">
                     <div class="card clear other-sites">
                         <h3>Project 1</h3>
-                        <img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg" alt="placeholder image" class="preview"   >
+                        <a href="#" target="_blank"><img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg" alt="placeholder image" class="preview"></a>
                     </div>
                     <div class="card clear other-sites">
                         <h3>Project 2</h3>
-                        <img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg" alt="placeholder image" class="preview">
+                        <a href="#" target="_blank"><img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg" alt="placeholder image" class="preview"></a>
                     </div>
                     <div class="card clear other-sites">
                         <h3>Project 3</h3>
-                        <img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg" alt="placeholder image" class="preview">
+                        <a href="#" target="_blank"><img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg" alt="placeholder image" class="preview"></a>
                     </div>
                     <div class="card clear other-sites">
                         <h3>Project 4</h3>
-                        <img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg" alt="placeholder image" class="preview">
+                        <a href="#" target="_blank"><img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg" alt="placeholder image" class="preview"></a>
                     </div>
                 </div>
             </section>
@@ -82,10 +82,10 @@
             <section id="contact">
                 <header class="section-header">Where to Find Me</header>
                 <ul class="clear">
-                    <li><a href="tel:6145633108"><i class="fas fa-mobile" name="Phone"></i> </a></li>
-                    <li><a href="mailto:brandonscottking@gmail.com"><i class="far fa-envelope" name="Email"></i> </a></li>
-                    <li><a href="https://github.com/thebsking"><i class="fab fa-github" name="Github"></i></a> </li>
-                    <li><a href="https://linkedin.com/in/brandonsking"><i class="fab fa-linkedin-in" name="LinkedIn"></i></a> </li>
+                    <li><a href="tel:6145633108" target="_blank"><i class="fas fa-mobile" name="Phone"></i> </a></li>
+                    <li><a href="mailto:brandonscottking@gmail.com" target="_blank"><i class="far fa-envelope" name="Email"></i> </a></li>
+                    <li><a href="https://github.com/thebsking" target="_blank"><i class="fab fa-github" name="Github"></i></a> </li>
+                    <li><a href="https://linkedin.com/in/brandonsking" target="_blank"><i class="fab fa-linkedin-in" name="LinkedIn"></i></a> </li>
                 </ul>
             </section>
             <footer>
