added materialize framework

--- a/index.html
+++ b/index.html
@@ -1,97 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Brandon King's Web Portfolio</title>
-        <link rel="stylesheet" href="assets/css/reset.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <script src="https://kit.fontawesome.com/0e3602565a.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <header id="site-header">
-            <div class="top-header">
-                <h1>Brandon King</h1>
-                <img src="assets/images/headshot-2.jpg" alt="brandon king headshot" id="headshot">
+
+<head>
+    <meta charset="utf-8">
+    <title>Brandon King's Web Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/0e3602565a.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="navbar-fixed">
+        <nav>
+            <div class="nav-wrapper">
+                <ul class="right">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#resume">Resume</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </div>
-            <nav class="main-nav">
-                    <a href="#about">About</a>
-                    <a href="#work">Work</a>
-                    <a href="#resume">Resume</a>
-                    <a href="#contact">Contact</a>
-            </nav>
-        </header>
-        <main>
-            <section id="about">
-                <header class="section-header">Who I Am</header>
-                <article id="about-text" class="clear">
-                    <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a long history in the customer service industry and am currently working as a systems administrator for a local nonprofit. 
-                    <p>But I have always had an interest in web development. I remember learning html when GeoCities was popular, and I have tried to continually add to my skills ever since. </p>
-                    <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
-                </article>
-            </section>
-            <section id="work">
-                <header class="section-header">What I've Made</header>
-                    <div class="card clear top-preview">
-                        <h3>Big Brothers Big Sisters of Central Ohio</h3>
-                        <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png" alt="bbbs website" class="hero"></a>
-                    </div>
-                    <div class="preview-container">
-                    <div class="card clear other-sites">
-                        <h3>Project 1</h3>
-                        <a href="#" target="_blank"><img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg" alt="placeholder image" class="preview"></a>
-                    </div>
-                    <div class="card clear other-sites">
-                        <h3>Project 2</h3>
-                        <a href="#" target="_blank"><img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg" alt="placeholder image" class="preview"></a>
-                    </div>
-                    <div class="card clear other-sites">
-                        <h3>Project 3</h3>
-                        <a href="#" target="_blank"><img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg" alt="placeholder image" class="preview"></a>
-                    </div>
-                    <div class="card clear other-sites">
-                        <h3>Project 4</h3>
-                        <a href="#" target="_blank"><img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg" alt="placeholder image" class="preview"></a>
-                    </div>
+        </nav>
+    </div>
+    <main>
+        <section id="about">
+            <header class="section-header">Who I Am</header>
+            <article id="about-text" class="clear">
+                <p>Hello there! My name is Brandon, and I am pursuing a career in full stack web development. I have a
+                    long history in the customer service industry and am currently working as a systems administrator
+                    for a local nonprofit.
+                <p>But I have always had an interest in web development. I remember learning html when GeoCities was
+                    popular, and I have tried to continually add to my skills ever since. </p>
+                <p>I have put together this page to showcase the web applications I am creating on my journey.</p>
+            </article>
+        </section>
+        <section id="work">
+            <header class="section-header">What I've Made</header>
+            <div class="card clear top-preview">
+                <h3>Big Brothers Big Sisters of Central Ohio</h3>
+                <a href="https://bbbscentralohio.org" target="_blank"><img src="assets/images/bbbs.png"
+                        alt="bbbs website" class="hero"></a>
+            </div>
+            <div class="preview-container">
+                <div class="card clear other-sites">
+                    <h3>Project 1</h3>
+                    <a href="#" target="_blank"><img src="assets/images/brennan-burling-ITtPnM7_oPw-unsplash.jpg"
+                            alt="placeholder image" class="preview"></a>
                 </div>
-            </section>
-            <section id="resume">
-                <header class="section-header">How I Got Here</header>
-                    <article class="clear">
-                        <h3>Skills</h3>
-                        <ul>
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>JavaScript</li>
-                            <li>Wordpress</li>
-                            <li>Git</li>
-                        </ul>
-                    </article>
-                    <article class="clear" id="Education">
-                        <h3>Education</h3>
-                        <h4>The Ohio State University</h4>
-                        <p>B.A. Commnunication - 2009</p>
-                        <p>Coding Bootcamp - 2021</p>
-                </article>
-                <article class="clear" id="jobs">
+                <div class="card clear other-sites">
+                    <h3>Project 2</h3>
+                    <a href="#" target="_blank"><img src="assets/images/glenn-carstens-peters-P1qyEf1g0HU-unsplash.jpg"
+                            alt="placeholder image" class="preview"></a>
+                </div>
+                <div class="card clear other-sites">
+                    <h3>Project 3</h3>
+                    <a href="#" target="_blank"><img src="assets/images/edho-pratama-T6fDN60bMWY-unsplash.jpg"
+                            alt="placeholder image" class="preview"></a>
+                </div>
+                <div class="card clear other-sites">
+                    <h3>Project 4</h3>
+                    <a href="#" target="_blank"><img src="assets/images/webstacks-WbOR54pzvLM-unsplash.jpg"
+                            alt="placeholder image" class="preview"></a>
+                </div>
+            </div>
+        </section>
+        <section id="resume">
+            <header class="section-header">How I Got Here</header>
+            <article class="clear">
+                <h3>Skills</h3>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                    <li>Wordpress</li>
+                    <li>Git</li>
+                </ul>
+            </article>
+            <article class="clear" id="Education">
+                <h3>Education</h3>
+                <h4>The Ohio State University</h4>
+                <p>B.A. Commnunication - 2009</p>
+                <p>Coding Bootcamp - 2021</p>
+            </article>
+            <article class="clear" id="jobs">
                 <h3>Experience</h3>
                 <h4>Big Brothers Big Sisters of Central Ohio</h4>
                 <p>2017 - Present</p>
                 <p>Technology & Operations Specialist</p>
-                </article>
-            </section>
-            <section id="contact">
-                <header class="section-header">Where to Find Me</header>
-                <ul class="clear">
-                    <li><a href="tel:6145633108" target="_blank"><i class="fas fa-mobile" name="Phone"></i> </a></li>
-                    <li><a href="mailto:brandonscottking@gmail.com" target="_blank"><i class="far fa-envelope" name="Email"></i> </a></li>
-                    <li><a href="https://github.com/thebsking" target="_blank"><i class="fab fa-github" name="Github"></i></a> </li>
-                    <li><a href="https://linkedin.com/in/brandonsking" target="_blank"><i class="fab fa-linkedin-in" name="LinkedIn"></i></a> </li>
-                </ul>
-            </section>
-            <footer>
-                <h5>Created by BK &copy; 2021</h5>
-                <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
-            </footer>
-        </main>
-    </body>
+            </article>
+        </section>
+        <section id="contact">
+            <header class="section-header">Where to Find Me</header>
+            <ul class="clear">
+                <li><a href="tel:6145633108" target="_blank"><i class="fas fa-mobile" name="Phone"></i> </a></li>
+                <li><a href="mailto:brandonscottking@gmail.com" target="_blank"><i class="far fa-envelope"
+                            name="Email"></i> </a></li>
+                <li><a href="https://github.com/thebsking" target="_blank"><i class="fab fa-github"
+                            name="Github"></i></a> </li>
+                <li><a href="https://linkedin.com/in/brandonsking" target="_blank"><i class="fab fa-linkedin-in"
+                            name="LinkedIn"></i></a> </li>
+            </ul>
+        </section>
+        <footer>
+            <h5>Created by BK &copy; 2021</h5>
+            <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
+        </footer>
+    </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
+
 </html>
