switch framework to bulma, added jquery

--- a/index.html
+++ b/index.html
@@ -4,24 +4,30 @@
 <head>
     <meta charset="utf-8">
     <title>Brandon King's Web Portfolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script src="https://kit.fontawesome.com/0e3602565a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper">
-                <ul class="right">
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#resume">Resume</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
+    <nav class="navbar" role="navigation">
+        <div class="navbar-brand">
+            <h1>Brandon King</h1>
+            <a href="#" role="button" class="navbar-burger" data-target="navbar-mobile">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+        <div id="navbar-mobile" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="#about">About</a>
+                <a class="navbar-item" href="#work">Work</a>
+                <a class="navbar-item" href="#resume">Resume</a>
+                <a class="navbar-item" href="#contact">Contact</a>
             </div>
-        </nav>
-    </div>
+        </div>
+    </nav>
+    
     <main>
         <section id="about">
             <header class="section-header">Who I Am</header>
@@ -106,7 +112,8 @@
             <p>stock images from <a href="https://unsplash.com">Unsplash</a></p>
         </footer>
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="assets/js/index.js"></script>
 </body>
 
 </html>
